--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -66,8 +66,8 @@
                         Projects
                     </a>
                     <ul class="dropdown-menu non-bullet-list" aria-labelledby="projectDropdown">
-                        <li><a class="dropdown-item" href="{% url 'civil_project' %}">Civil</a></li>
-                        <li><a class="dropdown-item" href="{% url 'telecom_project' %}">Telecom</a></li>
+                        <li><a class="dropdown-item" href="{% url 'civil_project' %}">Civil Project</a></li>
+                        <li><a class="dropdown-item" href="{% url 'telecom_project' %}">Telecom Project</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -76,8 +76,8 @@
                         Services
                     </a>
                     <ul class="dropdown-menu non-bullet-list" aria-labelledby="serviceDropdown">
-                        <li><a class="dropdown-item" href="{% url 'civil_service' %}">Civil</a></li>
-                        <li><a class="dropdown-item" href="{% url 'telecom_service' %}">Telecom</a></li>
+                        <li><a class="dropdown-item" href="{% url 'civil_service' %}">Civil Services</a></li>
+                        <li><a class="dropdown-item" href="{% url 'telecom_service' %}">Telecom Services</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
