--- a/auspicious/templates/page/civil-service.html
+++ b/auspicious/templates/page/civil-service.html
@@ -44,42 +44,91 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/1.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Structural Design <br>(RCC Structure)</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Architectural Drawings</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/1.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Steel Structure <br>Design and Drawing</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Retrofitting Design</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/1.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Detailed Engineering</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="single-item">
                         <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
-                        <h5 class="text-center">Arehitectural</h5>
+                        <h5 class="text-center">Assessment As<br> Built Drawing</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Load Analysis (As Built)</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Building Information<br> Modeling (BIM)</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Lightning Protection System</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Fire Protection System</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Electrical System</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Plumbing Design</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-item">
+                        <img src="{% static 'assets/landing/assets/img/service/2.jpg' %}" class="img-fluid" alt="">
+                        <h5 class="text-center">Drainage System</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, consectetur? Assumenda maxime beatae nulla et perspiciatis mollitia soluta tempora, temporibus atque adipisci iste praesentium nostrum nemo minima necessitatibus.</p>
                     </div>
                 </div>
