--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -192,7 +192,7 @@
                                 <div class="item">
                                     <img src="{{ news.image.url }}" alt="" style="height: 250px; width: 250px;">
                                     <div class="overlay">
-                                        <h4>{{ news.title }}</h4>
+                                        <h4>{{ news.title|safe|truncatechars_html:8 }}</h4>
                                         <p>{{ news.description|safe|truncatechars_html:10}}</p>
                                         
                                     </div>
