--- a/dashboard/templates/dashboard/snippets/manage.html
+++ b/dashboard/templates/dashboard/snippets/manage.html
@@ -45,11 +45,11 @@
     {% endif %}
     {% endif %}
     
-    <div class="container text-center m-4">
+    <div class="container text-left m-4">
         <!-- Create Button trigger modal -->
-        <button type="button" class="btn btn-lg text-deco-none bg-c-green text-white m-1 js_create_{{namespace}}"
+        <button  type="button" class="btn btn-md text-deco-none btn btn-outline-primary text-black m-1 js_create_{{namespace}}"
             data-toggle="modal" data-target="#modal-create-{{namespace}}">
-            {{ page_title }}
+            + {{ page_title }}
         </button>
     </div>
     {% endif %}
