--- a/auspicious/templates/page/job-page.html
+++ b/auspicious/templates/page/job-page.html
@@ -90,7 +90,7 @@
                             </li>
                             {% if job_qs.hours %}
                             <li>
-                                <i class="fas fa-clock-o" style="color: #3492d0;"></i>
+                                <i class="fa fa-times" style="color: #3492d0;"></i>
                                 <div>
                                     <strong>Hours:</strong>
                                     <span>{{ job_qs.hours }}</span>
