--- a/dashboard/templates/dashboard/snippets/detail-common.html
+++ b/dashboard/templates/dashboard/snippets/detail-common.html
@@ -30,7 +30,7 @@
 
             {% if not create_url == None and can_add_change == True %}
             <a href="{% url create_url %}" class="btn btn-primary">
-                Create
+                <i class="fas fa-plus" ></i>
             </a>
             {% endif %}
             
@@ -38,21 +38,21 @@
             {% if not object.slug == None %}
             <a href="{% url update_url slug=object.slug %}" class="btn btn-primary">
                 <span class="">
-                    Edit
+                    <i class="fas fa-edit" ></i>
                 </span>
             </a>
             {% else %}
             <a href="{% url update_url id=object.id %}" class="btn btn-primary">
                 <span class="">
-                    Edit
+                    <i class="fas fa-edit" ></i>
                 </span>
             </a>
             {% endif %}
 
             {% endif %}
             {% if not list_url == None and can_view == True %}
-            <a href="{% url list_url %}" class="btn btn-primary">
-                View List
+            <a href="{% url list_url %}" class="btn btn-primary" alt="Show List">
+                <i class="fas fa-list" ></i>
             </a>
             {% endif %}
 
@@ -61,12 +61,12 @@
             {% if not object.slug == None %}
             <button type="button" class="btn btn-danger btn-xs text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                 value="{{object.slug}}" data-toggle="modal" data-target="#modal-delete-{{namespace}}">
-                Delete
+                <i class="fas fa-trash-alt" ></i>
             </button>
             {% else %}
             <button type="button" class="btn btn-danger btn-xs text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                 value="{{object.id}}" data-toggle="modal" data-target="#modal-delete-{{namespace}}">
-                Delete
+                <i class="fas fa-trash-alt" ></i>
             </button>
             {% endif %}
             {% endif %}
