--- a/dashboard/templates/dashboard/snippets/list-common.html
+++ b/dashboard/templates/dashboard/snippets/list-common.html
@@ -71,14 +71,14 @@
                                     <a href="{% url update_url slug=object.slug %}"
                                         class="btn btn-primary btn-sm text-deco-none">
                                         <span class="">
-                                            Edit
+                                            <i class="fas fa-edit" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% else %}
                                     <a href="{% url update_url id=object.id %}"
                                         class="btn btn-primary btn-sm text-deco-none">
                                         <span class="">
-                                            Edit
+                                            <i class="fas fa-edit" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% endif %}
@@ -89,14 +89,14 @@
                                     <a href="{% url detail_url slug=object.slug %}"
                                         class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
-                                            View
+                                            <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% else %}
                                     <a href="{% url detail_url id=object.id %}"
                                         class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
-                                            View
+                                            <i class="fas fa-eye" aria-hidden="true"></i>
                                         </span>
                                     </a>
                                     {% endif %}
@@ -108,14 +108,14 @@
                                         class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                                         value="{{object.slug}}" data-toggle="modal"
                                         data-target="#modal-delete-{{namespace}}">
-                                        Delete
+                                        <i class="fas fa-trash-alt" ></i>
                                     </button>
                                     {% else %}
                                     <button type="button"
                                         class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
                                         value="{{object.id}}" data-toggle="modal"
                                         data-target="#modal-delete-{{namespace}}">
-                                        Delete
+                                        <i class="fas fa-trash-alt" ></i>
                                     </button>
                                     {% endif %}
                                     {% endif %}
