--- a/auspicious/templates/page/galleries.html
+++ b/auspicious/templates/page/galleries.html
@@ -13,7 +13,7 @@
 
 
     <!-- Breadcrumbs -->
-    <section class="breadcrumbs" style="background-image:url('assets/img/breadcrumbs-bg.jpg')">
+    <section class="breadcrumbs" style="background-image:url({% static 'assets/landing/assets/img/breadcrumbs-bg.jpg' %})">
         <div class="container">
             <div class="row">
                 <!-- Breadcrumbs-Content -->
