--- a/auspicious/templates/components/footer.html
+++ b/auspicious/templates/components/footer.html
@@ -5,10 +5,10 @@
                 <div class="col-md-3 col-6 mb-4 mb-md-0">
                     <div class="title">About Us</div>
                     <ul class="list-unstyled">
-                        <li data = ".overview">Overview</li>
-                        <li><a href="">Mission & Vision</a></li>
-                        <li><a href="">Organization Profile</a></li>
-                        <li><a href="">Top Management</a></li>
+                        <li><a href="{% url 'about' %}#overview">Overview</a></li>
+                        <li><a href="{% url 'about' %}#mission&vision">Mission & Vision</a></li>
+                        <li><a href="{% url 'about' %}#profile">Organization Profile</a></li>
+                        <li><a href="{% url 'about' %}#openingstrength">Opening Strength</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-6">
