--- a/auspicious/templates/page/about.html
+++ b/auspicious/templates/page/about.html
@@ -37,7 +37,7 @@
     <!-- End Breadcrumbs -->
 
     <!-- About Start -->
-    <div class="about-area py-5">
+    <div class="about-area py-5" id="overview">
         <div class="container">
             <div class="row">
                 <div class="col-md-7 overview">
@@ -68,7 +68,7 @@
     <!-- Journey End -->
 
     <!-- Mission Vision Start -->
-    <div class="mission-vision py-5 section-title-2">
+    <div class="mission-vision py-5 section-title-2" id="mission&vision">
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-4"><span>Mission</span> & Vision</h3>
             <div class="row" style="text-align: justify">
@@ -91,7 +91,7 @@
     <!-- Mission Vision End -->
 
     <!-- Organization Profile Start -->
-    <div class="org-profile py-4 section-title-2">
+    <div class="org-profile py-4 section-title-2" id="profile">
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-3"><span>organization</span> profile</h3>
             <div class="row justify-content-center" style="text-align: center">
@@ -123,7 +123,7 @@
     <!-- Organization Profile End -->
 
     <!-- Opening Strength -->
-    <div class="opening-strength py-5 section-title-2">
+    <div class="opening-strength py-5 section-title-2" id="openingstrength">
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-4"><span>auspicious</span> Opening & Strength</h3>
             <div class="row text-center">
