--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -57,8 +57,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About Us</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        About Us
+                    </a>
+                    <ul class="dropdown-menu non-bullet-list" aria-labelledby="projectDropdown">
+                        <li><a class="dropdown-item" href="{% url 'about' %}#overview">Overview</a></li>
+                        <li><a class="dropdown-item" href="{% url 'about' %}#mission&vision">Mission & Vision</a></li>
+                        <li><a class="dropdown-item" href="{% url 'about' %}#profile">Organization Profile</a></li>
+                        <li><a class="dropdown-item" href="{% url 'about' %}#openingstrength">Opening Strength</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
