--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -41,7 +41,7 @@
                     <div class="blog-details-wrapper">
                         <div class="blog-details-img-date-wrap mb-35 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-details-img">
-                                <img src="{{ news_qs.image.url }}" alt="">
+                                <img src="{{ news_qs.image.url }}" alt="" style="height:400px; width:850px;">
                             </div>
                             <div class="blog-details-date">
                                 <h5>{{ news_qs.created_at.date.day }}
