--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -81,7 +81,7 @@
                         {% if request.user.is_authenticated %}
                         <div class="blog-author-wrap-2 aos-init" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-author-img-2">
-                                <img src="{% static 'assets/landing/assets/img/blog/blog-author-2.png' %}" alt="">
+                                <img src="{% static 'assets/landing/assets/img/blog/blog-author-2.png' %}" alt="" style="height:100px;width:100px;">
                             </div>
                             <div class="blog-author-content-2">
                                 <h2>{{ news_qs.created_by.user_profile.get_fullname }}</h2>
