--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -70,8 +70,8 @@
                             <div class="social-comment-digit-wrap aos-init" data-aos="fade-up" data-aos-delay="400">
                                 <div class="social-icon-style-2">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest-p"></i></a>
+                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <a href="#"><i class="fa fa-youtube"></i></a>
                                 </div>
                                 <div class="comment-digit">
                                     <a href="#">{{ total_comment }}<i class="fa fa-comments"></i></a>
