--- a/auspicious/templates/components/footer.html
+++ b/auspicious/templates/components/footer.html
@@ -1,4 +1,6 @@
-    <!-- Footer Top Start -->
+{% url 'account_login' as login_url %}
+{% url 'account_logout' as logout_url %}
+<!-- Footer Top Start -->
     <div class="footer-top">
         <div class="container">
             <div class="row justify-content-md-between">
