--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -43,7 +43,7 @@
     <div class="blog-area pt-100 pb-100">
         <div class="container">
             <div class="row">
-                {% for news in page_obj %}
+                {% for news in paginated_news_list %}
 
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
@@ -90,7 +90,7 @@
 
             </div>
             <div class="pagination-style-1 wow fadeInUp" data-wow-duration="2s">
-                {% include 'snippets/paginator.html' %}
+                {% include 'snippets/paginator.html' with page_obj=paginated_news_list %}
             </div>
         </div>
     </div>
