--- a/auspicious/templates/snippets/paginator.html
+++ b/auspicious/templates/snippets/paginator.html
@@ -1,23 +1,31 @@
 {% if page_obj.has_other_pages %}
-<ul class="pagination non-bullet-list">
-    {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}" class="next">&laquo;</a></li>
-    {% else %}
-    <li class="disabled"><span>&laquo;</span></li>
-    {% endif %}
-    {% for i in page_obj.paginator.page_range %}
-    {% if page_obj.number == i %}
-    <li>
-        <a href="#" class="active">{{ i }} <span class="sr-only">(current)</span></a>
-    </li>
-    {% else %}
-    <li><a href="?page={{ i }}">{{ i }}</a></li>
-    {% endif %}
-    {% endfor %}
-    {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}" class="next">&raquo;</a></li>
-    {% else %}
-    <li class="disabled"><span>&raquo;</span></li>
-    {% endif %}
-</ul>
+<nav aria-label="Page navigation example">
+    <ul class="pagination non-bullet-list justify-content-center">
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo;</a>
+        </li>
+        {% else %}
+        <li class="page-item disabled">
+            <span class="m-2">&laquo;</span>
+        </li>
+        {% endif %}
+        {% for i in page_obj.paginator.page_range %}
+        {% if page_obj.number == i %}
+        <li class="page-item active">
+            <a href="#" class="page-link">{{ i }} <span class="sr-only">(current)</span></a>
+        </li>
+        {% else %}
+        <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+        {% endif %}
+        {% endfor %}
+        {% if page_obj.has_next %}
+        <li class="page-item"><a href="?page={{ page_obj.next_page_number }}" class="page-link">&raquo;</a></li>
+        {% else %}
+        <li class="page-item disabled">
+            <span class="m-2">&raquo;</span>
+        </li>
+        {% endif %}
+    </ul>
+</nav>
 {% endif %}
