--- a/static/assets/landing/assets/css/custom.css
+++ b/static/assets/landing/assets/css/custom.css
@@ -2,9 +2,9 @@
    background-image: linear-gradient(#7ad1f5, #3492d0);
 }
 
-ul {
+/* ul {
     list-style-type: disc !important;
-}
+} */
 
 /* modal customization */
 .modal-backdrop {
