--- a/static_cdn/static_root/assets/landing/assets/css/custom.css
+++ b/static_cdn/static_root/assets/landing/assets/css/custom.css
@@ -2,9 +2,9 @@
    background-image: linear-gradient(#7ad1f5, #3492d0);
 }
 
-ul {
+/* ul {
     list-style-type: disc !important;
-}
+} */
 
 /* modal customization */
 .modal-backdrop {
@@ -30,4 +30,17 @@ ul {
 
 .hide {
     display: none !important;
+}
+
+.m-l-4 {
+    margin-left: 4px !important;
+}
+.m-l-6 {
+    margin-left: 6px !important;
+}
+.m-l-8 {
+    margin-left: 8px !important;
+}
+.m-l-10 {
+    margin-left: 10px !important;
 }
